tests/fixtures/errors/range_index_dim_mismatch.gcl
// Error: range index with mismatched dimensions
range TimeStep(0.0 s, 100.0 kg, step: 0.1 s);
